feat: add watermark

--- a/admin/src/translations/en.json
+++ b/admin/src/translations/en.json
@@ -22,6 +22,10 @@
   "settings.form.formats.withoutEnlargement.label": "Without enlargement",
   "settings.form.formats.withoutEnlargement.description": "Do not enlarge if the width or height are already less than the specified dimensions",
   "settings.form.quality.label": "Quality",
+  "settings.form.watermark.label": "Watermark",
+  "settings.form.watermarkColor.label": "Watermark color (rgba)",
+  "settings.form.watermarkColor.description": "Format example: rgba(0, 0, 0, 0.5)",
+  "settings.form.watermark.position.label": "Watermark position",
   "settings.form.progressive.label": "Progressive",
   "settings.header.label": "Responsive image",
   "settings.section.global.label": "Global settings",
